src/App.css
html {
  background: url(https://img.myloview.com/posters/old-paper-background-old-crumpled-paper-texture-vintage-retro-newspaper-empty-blank-space-page-with-grunge-stain-line-pattern-400-211347626.jpg) no-repeat center fixed;
  background-size: cover;
}

body {
  margin-top: 0;
  margin-left: 0;
  margin-right: 0;
}

p {
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-size: 1.2em;
  font-weight: medium;
}

h1, h2, h3, h4, h5, h6 {
  font-family: Georgia, 'Times New Roman', Times, serif;
}

a {
  color: black;
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-size: 2em;
}

button {
  font-size: 1em;
  font-family:Arial, Helvetica, sans-serif;
  margin-right: 5px;
  border-radius: 50px;
  text-align: center;
}

.nav {
  position: fixed;
  background-image: url(https://i.pinimg.com/736x/4c/38/03/4c38037d5a3c6006020fc8ebc201d707.jpg);
  background-size: cover;
  width: 100%;
  top: 0;
  /* justify-content: center; */
}

  .left-nav {
    float:left;
    padding-left:5%;
    padding-right:5%;
    width: 15%;
  }

  .mid-nav {
    float:left;
    padding-left: 5%;
    padding-right: 5%;
    width: 15%;
  }

  .right-nav {
    float:left; 
    padding-left:5%;
    padding-right: 5%;
    width: 15%;
  }

  .end-nav {
    float: left;
    padding-left: 5%;
    padding-right: 5%;
    width: 15%;
  }

.book-card {
  border-radius: 4px;
}

.homepage-div {
  display: flex;
  padding-top: 5%;
}

.top-books {
  padding: 5%
}

.top-stories {
  padding: 5%
}

.home-left {
  float: left;
  width: 50%;
  align-items: center;
  vertical-align: middle;
  
}

.home-right {
  float: right bottom;
  width: 50%;
  align-items: center;
  vertical-align: middle;
}

img {
  height: 400px;
  vertical-align: middle;
}

.App {
  text-align: center;
}

.fake-news {
  padding: 5%;
}

